--- a/123/Base.lproj/Main.storyboard
+++ b/123/Base.lproj/Main.storyboard
@@ -1,5 +1,5 @@
 <?xml version="1.0" encoding="UTF-8"?>
-<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="sti-iV-7gy">
+<document type="com.apple.InterfaceBuilder3.CocoaTouch.Storyboard.XIB" version="3.0" toolsVersion="14109" targetRuntime="iOS.CocoaTouch" propertyAccessControl="none" useAutolayout="YES" useTraitCollections="YES" useSafeAreas="YES" colorMatched="YES" initialViewController="j2I-bc-Vwh">
     <device id="retina5_5" orientation="portrait">
         <adaptation id="fullscreen"/>
     </device>
@@ -10,7 +10,7 @@
         <capability name="documents saved in the Xcode 8 format" minToolsVersion="8.0"/>
     </dependencies>
     <scenes>
-        <!--View Controller-->
+        <!--野原新之助-->
         <scene sceneID="tne-QT-ifu">
             <objects>
                 <viewController id="BYZ-38-t0r" customClass="ViewController" customModule="_23" customModuleProvider="target" sceneMemberID="viewController">
@@ -951,14 +951,24 @@
                                 <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
                                 <color key="backgroundColor" red="0.08235294118" green="0.4941176471" blue="0.98431372549999996" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                             </view>
+                            <button opaque="NO" contentMode="scaleToFill" fixedFrame="YES" contentHorizontalAlignment="center" contentVerticalAlignment="center" buttonType="roundedRect" lineBreakMode="middleTruncation" translatesAutoresizingMaskIntoConstraints="NO" id="4Fe-M7-EQa">
+                                <rect key="frame" x="237" y="658" width="152" height="48"/>
+                                <autoresizingMask key="autoresizingMask" flexibleMaxX="YES" flexibleMaxY="YES"/>
+                                <fontDescription key="fontDescription" type="system" pointSize="30"/>
+                                <state key="normal" title="我的好基友"/>
+                                <connections>
+                                    <segue destination="dPN-wz-Ul6" kind="show" id="IW2-i1-AVt"/>
+                                </connections>
+                            </button>
                         </subviews>
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="6Tk-OE-BBY"/>
                     </view>
+                    <navigationItem key="navigationItem" title="野原新之助" id="RZC-vr-P8I"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="dkx-z0-nzr" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="752.17391304347836" y="-133.69565217391306"/>
+            <point key="canvasLocation" x="1659.4202898550725" y="-133.69565217391306"/>
         </scene>
         <!--野原新之助-->
         <scene sceneID="DDr-bY-xG3">
@@ -1918,7 +1928,7 @@
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="GEf-m9-vnm" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="752.17391304347836" y="-133.69565217391306"/>
+            <point key="canvasLocation" x="1659.4202898550725" y="-133.69565217391306"/>
         </scene>
         <!--風間徹-->
         <scene sceneID="cCS-JZ-CNz">
@@ -3273,29 +3283,32 @@
                         <color key="backgroundColor" red="1" green="1" blue="1" alpha="1" colorSpace="custom" customColorSpace="sRGB"/>
                         <viewLayoutGuide key="safeArea" id="toG-aC-ZmK"/>
                     </view>
-                    <navigationItem key="navigationItem" title="風間徹" id="k7y-qa-WGy"/>
+                    <navigationItem key="navigationItem" title="風間徹" id="Dkt-2U-JWg"/>
                 </viewController>
                 <placeholder placeholderIdentifier="IBFirstResponder" id="hWF-aJ-bEx" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="1542.0289855072465" y="-143.47826086956522"/>
+            <point key="canvasLocation" x="2449.275362318841" y="-143.47826086956522"/>
         </scene>
         <!--Navigation Controller-->
-        <scene sceneID="knz-Im-Be3">
+        <scene sceneID="szz-v1-8oF">
             <objects>
-                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="sti-iV-7gy" sceneMemberID="viewController">
+                <navigationController automaticallyAdjustsScrollViewInsets="NO" id="j2I-bc-Vwh" sceneMemberID="viewController">
                     <toolbarItems/>
-                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="ot1-H9-5Lc">
+                    <navigationBar key="navigationBar" contentMode="scaleToFill" insetsLayoutMarginsFromSafeArea="NO" id="1V4-s3-m4P">
                         <rect key="frame" x="0.0" y="20" width="414" height="44"/>
                         <autoresizingMask key="autoresizingMask"/>
                     </navigationBar>
                     <nil name="viewControllers"/>
                     <connections>
-                        <segue destination="2BZ-jx-OQl" kind="relationship" relationship="rootViewController" id="QcH-KT-pF0"/>
+                        <segue destination="BYZ-38-t0r" kind="relationship" relationship="rootViewController" id="BrU-Lc-DNb"/>
                     </connections>
                 </navigationController>
-                <placeholder placeholderIdentifier="IBFirstResponder" id="DP6-jB-eYt" userLabel="First Responder" sceneMemberID="firstResponder"/>
+                <placeholder placeholderIdentifier="IBFirstResponder" id="TKL-hh-6kK" userLabel="First Responder" sceneMemberID="firstResponder"/>
             </objects>
-            <point key="canvasLocation" x="-155.07246376811597" y="-133.69565217391306"/>
+            <point key="canvasLocation" x="752.17391304347836" y="-133.69565217391306"/>
         </scene>
     </scenes>
+    <inferredMetricsTieBreakers>
+        <segue reference="IW2-i1-AVt"/>
+    </inferredMetricsTieBreakers>
 </document>
